--- a/src/site/notes/2023.6.9-怎么做好部门周报？.md
+++ b/src/site/notes/2023.6.9-怎么做好部门周报？.md
@@ -1,8 +1,8 @@
 ---
-{"dg-publish":true,"permalink":"/2023-6-9/","tags":["gardenEntry"]}
+{"dg-publish":true,"permalink":"/2023-6-9/","created":"","updated":""}
 ---
 
-- 以结果为导向
+以结果为导向
 
 ## 本周工作情况
 围绕部门工作：
